<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/searchInput"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction= "ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />


    <item
        android:id="@+id/favourite"
        android:title="@string/favourite"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom|collapseActionView"
        />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_exit"
        app:showAsAction="ifRoom|collapseActionView"
        />

</menu>