<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/backgroud"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/textColor"
            android:textAlignment="center"
            android:textSize="@dimen/albumDetailSize"
            android:textStyle="bold"
            android:paddingBottom="@dimen/albumDetailSize"

            />
        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/signUp"
            android:layout_width="@dimen/btnSize"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up"
            android:layout_gravity="center"
            android:background="@color/btnBackground"
            android:textColor="@color/textColor"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            />
        <TextView
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textColor="@color/textColor"
            android:textAlignment="center"
            android:textSize="@dimen/artistDetailSize"

            />


    </LinearLayout>


</LinearLayout>