<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignIn"
    android:orientation="vertical"
    android:background="@color/backgroud"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/textColor"

            android:textSize="@dimen/albumDetailSize"
            android:textStyle="bold"
            android:paddingBottom="@dimen/albumDetailSize"

            />

        <EditText
            android:id="@+id/signInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"

            />

        <EditText
            android:id="@+id/signInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/textColor"
            android:textColor="@color/textColor"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/signIn"
            android:layout_width="@dimen/btnSize"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in"
            android:layout_gravity="center"
            android:background="@color/btnBackground"
            android:textColorHint="@color/textColor"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"/>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"

            android:textColor="@color/textColor"
            android:textSize="@dimen/artistDetailSize"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/Vector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="608dp"
            android:layout_weight="1"
             />

    </LinearLayout>

</LinearLayout>